--- a/TBDOSBOX/TBDOSBOX.vcxproj.filters
+++ b/TBDOSBOX/TBDOSBOX.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="SystemTray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OrcadWnd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TBDOSBOX.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SystemTray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OrcadWnd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
