--- a/TBDOSBOX/TBDOSBOX.vcxproj.filters
+++ b/TBDOSBOX/TBDOSBOX.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="SystemTray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="OrcadWnd.h">
+    <ClInclude Include="Orcad\OrcadWnd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -53,7 +53,7 @@
     <ClCompile Include="SystemTray.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="OrcadWnd.cpp">
+    <ClCompile Include="Orcad\OrcadWnd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
